--- a/Bot/Resources/Messages.resx
+++ b/Bot/Resources/Messages.resx
@@ -38,8 +38,16 @@
     </data>
     <data name="DefaultMessage" xml:space="preserve">
         <value>
-Your takeouts since {0}:
-{1}
+Your takeouts since last Sunday:
+{0}
+Week takeouts amount: *{1}* gr.
+Week debt: *{2}* UAH
         </value>
+    </data>
+    <data name="TakeoutInfo" xml:space="preserve">
+        <value>{0}: {1} gr. = *{2}* UAH</value>
+    </data>
+    <data name="OrderCreated" xml:space="preserve">
+        <value>Created!</value>
     </data>
 </root>
